--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.8.3",
     "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
+    "crypto-js": "^4.2.0",
     "express": "^4.18.3",
     "jquery": "^3.6.0",
     "js-cookie": "^2.2.1",
